fixed up Info Bar General: age and residence information
Things for me to consider: bottom border isn't showing on desktop view for some reason.
Residence is too long and might mess up the spacing

--- a/style.css
+++ b/style.css
@@ -516,6 +516,24 @@ button {
   width: auto;
 }
 
+.infoBarGeneral{
+  grid-column: 2 / 4;
+  /* display: inline-block; */
+}
+
+.infoBarGeneralInfo{
+  border-bottom: none;
+}
+
+.infoBarGeneralInfoTitle{
+  display: inline-block;
+  background-color: var(--darkGold_Button);
+  padding: 5px;
+}
+.infoBarGeneralInfoDesc{
+  display: inline-block;
+}
+
 /************ Info Bar Media Query **************/
 @media (min-width: 600px) {
   .infoBarWrapper {
@@ -551,6 +569,18 @@ button {
   .infoBarHeaderSocialImage{
   }
 
+  .infoBarGeneral{
+    grid-column: 1 / 2;
+    padding: 15px;
+  }
+
+  .infoBarGeneralInfo{
+  }
+  
+  .infoBarGeneralInfoTitle{
+  }
+  .infoBarGeneralInfoDesc{
+  }
 }
 
 
